Updated to v1.3.9 Fixed text overflow in notes

--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -421,7 +421,7 @@ body
         display: inline-block
 
         &>span, &>a
-            white-space: pre
+            white-space: pre-wrap
 
         a
             overflow-wrap: break-word
